--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
 <body>
   <div class="container-fluid">
     <div id="quiz"></div>
+    <div class="thefile">   
+    </div>
   </div>
   <script src="https://code.jquery.com/jquery-1.11.2.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
